--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streambox",
-  "main": "expo-router/entry",
+  "main": "expo/AppEntry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -13,10 +13,10 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.8.5",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/stack": "^7.6.4",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/elements": "^2.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
     "@reduxjs/toolkit": "^2.10.1",
     "async-storage": "^0.1.0",
     "axios": "^1.13.2",
@@ -26,23 +26,22 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "feather-icons": "^4.29.2",
+    "formik": "^2.4.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "0.75.1",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-gesture-handler": "~2.18.0",
+    "react-native-reanimated": "~3.8.0",
+    "react-native-safe-area-context": "~4.10.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.15.0",
+    "react-native-web": "~0.19.0",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
   },
