--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "async-storage": "^0.1.0",
     "axios": "^1.13.2",
-    "expo": "~54.0.24",
+    "expo": "^54.0.25",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -34,14 +34,16 @@
     "formik": "^2.4.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.75.1",
+    "react-native": "^0.81.5",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "~2.18.0",
-    "react-native-reanimated": "~3.8.0",
-    "react-native-safe-area-context": "~4.10.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-svg": "^15.15.0",
-    "react-native-web": "~0.19.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.1",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.6.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
   },
