--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
@@ -45,7 +46,7 @@
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
